# mercs_and_mines

./: .env.example  .gitignore  Anchor.toml  CLAUDE.md  Cargo.toml  package-lock.json
.claude/: settings.local.json
.github/workflows/: release.yml
app/: app.js  game.html  index.html  lore.html  pitch.html  style.css
app/assets/sfx/: 675654__craigsmith__s20-08-active-rifle-fire.wavZone.Identifier
app/css/: landing.css
crates/server/: Cargo.toml
crates/server/src/: api_types.rs  auth.rs  config.rs  integrity.rs  lib.rs  log_reader.rs  log_writer.rs  main.rs  routes.rs  solana.rs  state.rs
crates/server/src/repository/: account.rs  mod.rs  sector.rs  timer.rs
crates/server/src/routes/: mod.rs  ws_combat.rs
crates/server/tests/: aar_determinism.rs
crates/shared/: Cargo.toml
crates/shared/src/: hex.rs  lib.rs  ws_events.rs
crates/sim-engine/: Cargo.toml
crates/sim-engine/src/: config.rs  constants.rs  detection.rs  equipment.rs  game_types.rs  lib.rs  loot_roller.rs  missions.rs  npc_ai.rs  npc_types.rs  ore_run.rs  resolver.rs  rng.rs  scenario.rs  types.rs  units.rs
logs/: dac1c635-f25b-443f-bff3-ff3f9ebf6f9c.ndjson  e2426618-216a-46e1-953c-d0adce1e4336.ndjson
programs/: Cargo.toml
programs/mercs_and_mines/: Cargo.toml
programs/mercs_and_mines/src/: lib.rs
tests/: mercs_and_mines.ts
