[workspace]
members = [
    "crates/*",
]
exclude = [
    "programs/*",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
serde      = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
getrandom  = { version = "0.2", features = ["js"] }
shared     = { path = "crates/shared" }

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
