[package]
name    = "mercs-server"
version.workspace = true
edition.workspace = true

[[bin]]
name = "mercs-server"
path = "src/main.rs"

[dependencies]
axum        = "0.7"
tokio       = { version = "1", features = ["full"] }
tower       = "0.4"
tower-http  = { version = "0.5", features = ["cors"] }
chrono      = { version = "0.4", features = ["serde"] }
serde       = { workspace = true }
serde_json  = { workspace = true }
sim-engine  = { path = "../sim-engine" }
