[package]
name    = "sim-engine"
version.workspace = true
edition.workspace = true

[features]
# Enables the async streaming resolver. Not included in non-server builds
# (e.g., Solana BPF programs) to avoid pulling tokio into that target.
streaming = ["dep:tokio"]

[dependencies]
serde      = { workspace = true }
serde_json = { workspace = true }
shared     = { workspace = true }
getrandom  = { workspace = true }
tokio      = { version = "1", features = ["sync", "time"], optional = true }
